commented code removed

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
       <div>
         <img src='images/passhub_logo.svg' height=24 style="margin-top:36px;"/>
         <div style="display:flex; margin-top:40px">
-          <div class="help" >          
+          <div class="help help-link" >          
           </div>
           <div class="close-popup" >
           </div>
