websocket as a class

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,8 @@
   <body>
     <div class='header'>
       <div>
-        <img src='images/passhub_logo.svg' height=24 style="margin-top:36px;"/>
+        <img id="logo" style="margin-top:36px; cursor:pointer" title="Open page PassHub.net" src='images/passhub_logo.svg' height=24 />
+
         <div style="display:flex; margin-top:40px">
           <div class="help help-link" >          
           </div>
