Readme.md added

--- a/popup.html
+++ b/popup.html
@@ -45,9 +45,57 @@
       </div>
     </div>    
 
-    <div id="wait" style="display:none">
+    <div id="wait" style="display:none; width:320; margin: 20px 40px ">
       <div id="wait-message">Logging in</div>
       <div>Please wait</div>
+    </div>
+
+    <div class="create-account" style="margin: 20px 40px; min-height: 62px; width: 320px; display:none; font-family: OpenSans;font-size: 16px;
+    line-height: 24px;">
+      Your do not have an account yet. <br>To register, go to 
+      <span class="open-passhub-tab"
+      style="
+        color: #31ba68;
+        font-family: OpenSansBold;
+        font-style: normal;
+        /* font-weight: bold; */
+        font-size: 15.5px;
+        line-height: 21px;
+        cursor:pointer;
+/*        text-align: center; */
+        margin: 5px 0; 
+
+      "
+    >PassHub.net</span>    
+<!--
+      <div>
+        <span
+          style="
+            font-family: OpenSans;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 22px;
+            color: #1b1b26;
+            margin-right:0.1em;
+        "
+        ></span>
+        <span class="open-passhub-tab"
+          style="
+            color: #31ba68;
+            font-family: OpenSansBold;
+            font-style: normal;
+            /* font-weight: bold; */
+            font-size: 15.5px;
+            line-height: 21px;
+            cursor:pointer;
+          "
+        >PassHub.net</span>    
+      </div>
+    -->
+      <div>      
+      and scan the QR code.
+      </div>
     </div>
 
     <div
