logo: hover sensitivity

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
   <body>
     <div class='header'>
       <div>
-        <img id="logo" style="margin-top:36px; cursor:pointer" title="Open page PassHub.net" src='images/passhub_logo.svg' height=24 />
+        <img id="logo" title="Open page PassHub.net" src='images/passhub_logo.svg'/>
 
         <div style="display:flex; margin-top:40px">
           <div class="help help-link" >          
