major upgrade for iFrames

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,24 @@
       </div>
     </div>
 
+    <div id="paygate" 
+      style="
+      margin: 18px 40px; 
+      min-height: 62px; 
+      width: 320px; 
+      font-family: OpenSans;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 22px;
+      display: none;"
+      >
+      Payment paltform<br>
+      <span id="paygate-url" style="font-family: OpenSansBold;">
+        XXX
+      </span>
+    </div>
+
     <div id="advise"
       style="display: none; margin: 13px 40px 40px; width: 320px;"
     >
@@ -44,6 +62,23 @@
         Found:
       </div>
     </div>    
+    <div id="not-a-regular-page" 
+      style="
+      margin: 18px 40px; 
+      min-height: 62px; 
+      width: 320px; 
+      font-family: OpenSans;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 22px;
+      display: none;"
+      >
+      Not a regular page<br>
+      <span id="not-a-regular-page-url" style="font-family: OpenSansBold;">
+        XXX
+      </span>
+    </div>
 
     <div id="wait" style="display:none; width:320; margin: 20px 40px ">
       <div id="wait-message">Logging in</div>
@@ -173,6 +208,7 @@
         "
         >Open page</span>
         <span
+          id="server-name"
           style="
             color: #31ba68;
             font-family: OpenSansBold;
