final cleanup before v0.4  publish

--- a/popup.html
+++ b/popup.html
@@ -39,10 +39,12 @@
           line-height: 22px;
       display: none;"
       >
-      Payment paltform<br>
-      <span id="paygate-url" style="font-family: OpenSansBold;">
+      <div style="font-size: 14px; line-height: 22px;" >
+        The site payment paltform
+      </div>
+      <div id="paygate-url" style="font-family: OpenSansBold;">
         XXX
-      </span>
+      </div>
     </div>
 
     <div id="advise"
