--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <div id="advise"
+    <div id="advice"
       style="display: none; margin: 13px 40px 40px; width: 320px;"
     >
       <div
