--- a/popup.html
+++ b/popup.html
@@ -23,14 +23,6 @@
         <img id="logo" class="open-passhub-tab" title="Open page PassHub.net" src='images/passhub_logo.svg' />
 
         <div style="display:flex; margin-top:40px">
-          <div title="refresh">
-            <svg class="refresh" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-              <title>Refresh</title>
-              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z" />
-              <path
-                d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466" />
-            </svg>
-          </div>
           <div class="help help-link">
           </div>
           <div class="close-popup">
@@ -38,6 +30,33 @@
         </div>
       </div>
     </header>
+
+    <div class="icons" style="display:flex; justify-content: flex-end; gap:24px;padding: 16px 40px 0 ">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="credit-card bi bi-credit-card"
+        viewBox="0 0 16 16" style="width: 24px; height:24px; cursor: pointer">
+        <title>Show credit cards</title>
+
+        <path
+          d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z" />
+        <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
+      </svg>
+
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="refresh bi bi-arrow-clockwise"
+        viewBox="0 0 16 16" style="width: 24px; height:24px; cursor: pointer">
+        <title>Refresh</title>
+        <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z" />
+        <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466" />
+      </svg>
+
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="logout bi bi-box-arrow-right"
+        viewBox="0 0 16 16" style="width: 24px; height:24px; cursor: pointer">
+        <title>Logout</title>
+        <path fill-rule="evenodd"
+          d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z" />
+        <path fill-rule="evenodd"
+          d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z" />
+      </svg>
+    </div>
 
     <main>
       <div class="page login-page">
@@ -106,12 +125,14 @@
 
       <div class="page not-found-page">
 
+        <!--
         <div class="show-credit-card" title="Show credit cards">
           <svg class="credit-card" xmlns="http://www.w3.org/2000/svg" viewBox="0 1 24 24">
             <path
               d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z" />
           </svg>
         </div>
+-->
 
         <div style="display: flex;">
 
@@ -137,31 +158,23 @@
         <div id="paygate">
 
           <div style="font-size: 14px; line-height: 22px;">
-            The site payment paltform
+            Payment paltform:
           </div>
           <div id="paygate-url" style="font-family: OpenSansBold;">
             XXX
           </div>
         </div>
 
-        <div style="display:flex; flex-direction: row; justify-content:space-between; margin-bottom: 20px;">
-          <span>Found:</span>
-          <div class="show-credit-card" title="Show credit cards">
-            <svg class="credit-card" xmlns="http://www.w3.org/2000/svg" viewBox="0 1 24 24">
-              <path
-                d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z" />
-            </svg>
-          </div>
-        </div>
         <div id="advice-list">
         </div>
 
       </div>
     </main>
-
+    <!--
     <div class="lower-tab">
       <div class="logout-div">Logout</div>
     </div>
+-->
 
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
