1. server name is shown if not passhub.net 2. login on http site is now possible, with warning though

--- a/popup.html
+++ b/popup.html
@@ -67,6 +67,7 @@
       </svg>
     </div>
 
+
     <main>
       <div class="page login-page">
         <div class="rectangle640" style="background:white">
@@ -151,7 +152,14 @@
         </div>
       </div>
 
+
       <div class="page" id="advice-page">
+
+        <div id="danger-http">
+          <span>Danger: </span> unsecured http page, proceed at your own risk.
+        </div>
+
+
         <div id="paygate">
 
           <div style="font-size: 14px; line-height: 22px;">
@@ -163,10 +171,15 @@
         </div>
 
         <div id="advice-list">
+
         </div>
 
       </div>
     </main>
+
+    <div style="margin:0 auto 16px;">
+      <a id="server-name-element" href="https://passhub.net" style="text-decoration: none;">passhub.net</a>
+    </div>
 
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
